Projet-Compilateur/src/Yaka.java
/* Generated By:JavaCC: Do not edit this line. Yaka.java */
public class Yaka implements YakaConstants {

        public static String result = "" ;

        public static void main(String args[]) {
                Yaka analyseur;
                java.io.InputStream input;

                if (args.length==1) {
                        System.out.print(args[args.length-1] + ": ");
                        try {
                                input = new java.io.FileInputStream(args[args.length-1]+".yaka");
                        }
                        catch (java.io.FileNotFoundException e) {
                                System.out.println("Fichier introuvable.");
                        return;
                        }
                }
                else if (args.length==0) {
                        System.out.println("Lecture sur l'entree standard...");
                        input = System.in;
                }
                else {
                        System.out.println("Usage: java Gram [fichier]");
                        return;
                }
                try {
                        analyseur = new Yaka(input);
                        analyseur.analyse();
                        System.out.println("analyse syntaxique reussie!");
                        System.out.println(IdentArray.inString());
                        System.out.println(Expression.inString()) ;
                        System.out.println(result) ;
                }
                catch (ParseException e) {
                        String msg = e.getMessage();
                        System.out.println("Erreur de syntaxe : "+msg);
                }
        }


        /**
	 *  Lecture d'un programme
	 */
        public void prog() {

        }

/**************************************/
/********debut de la grammaire ********/
/**************************************/
  static final public void analyse() throws ParseException {
    jj_consume_token(PROGRAMME);
    jj_consume_token(ident);
                       Yaka.result += "entete" ;
    bloc();
    jj_consume_token(FPROGRAMME);
                Yaka.result += "\u005cnqueue" ;
  }

  static final public void bloc() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      declConst();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      declVar();
    }
              Yaka.result += "\u005cnouvrePrinc "+ IdentArray.nbVar() ;
    suiteExpr();
  }

  static final public void declConst() throws ParseException {
    jj_consume_token(CONST);
    defConst();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(51);
      defConst();
    }
    jj_consume_token(52);
  }

  static final public void defConst() throws ParseException {
    jj_consume_token(ident);
                             IdentArray.lastIdent = YakaTokenManager.identLu;
    jj_consume_token(EGAL);
    valConst();
     IdentArray.add(IdentArray.lastIdent, new IdConst(IdentArray.lastValue, IdentArray.lastType));
  }

  static final public void valConst() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case entier:
      jj_consume_token(entier);
          IdentArray.lastValue = YakaTokenManager.entierLu;
          IdentArray.lastType = YakaConstants.tokenImage[ENTIER];
      break;
    case ident:
      jj_consume_token(ident);
         IdConst i = (IdConst) IdentArray.get(YakaTokenManager.identLu);
         if(i != null) {
                 IdentArray.lastValue = i.value;
                 IdentArray.lastType = i.type;
         }
         else {
                 TokenMgrError error = new TokenMgrError("Error : "+YakaTokenManager.identLu+" ident not found", TokenMgrError.LEXICAL_ERROR);
                 System.err.println(error.getMessage());
         }
      break;
    case VRAI:
      jj_consume_token(VRAI);
         IdentArray.lastValue = Ident.TRUE;
         IdentArray.lastType = YakaConstants.tokenImage[BOOLEEN];
      break;
    case FAUX:
      jj_consume_token(FAUX);
         IdentArray.lastValue = Ident.FALSE;
         IdentArray.lastType = YakaConstants.tokenImage[BOOLEEN];
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void declVar() throws ParseException {
    jj_consume_token(VAR);
    type();
    jj_consume_token(ident);
          IdentArray.shiftOffset();
          IdentArray.add(YakaTokenManager.identLu, new IdVar(IdentArray.currentOffset, IdentArray.lastType));
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      jj_consume_token(51);
      jj_consume_token(ident);
                  IdentArray.shiftOffset();
                  IdentArray.add(YakaTokenManager.identLu, new IdVar(IdentArray.currentOffset, IdentArray.lastType));
    }
    jj_consume_token(52);
  }

  static final public void type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ENTIER:
      jj_consume_token(ENTIER);
               IdentArray.lastType = YakaConstants.tokenImage[ENTIER];
      break;
    case BOOLEEN:
      jj_consume_token(BOOLEEN);
                IdentArray.lastType = YakaConstants.tokenImage[BOOLEEN];
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*
 * Syntaxe des instructions.
 */
  static final public void suiteExpr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MOINS:
    case NON:
    case VRAI:
    case FAUX:
    case entier:
    case ident:
    case 53:
      expression();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 52:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        jj_consume_token(52);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MOINS:
        case NON:
        case VRAI:
        case FAUX:
        case entier:
        case ident:
        case 53:
          expression();
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
      }
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
  }

/*
 * Expression .
 */
  static final public void expression() throws ParseException {
    simpleExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INF:
    case SUP:
    case INFEGAL:
    case SUPEGAL:
    case EGAL:
    case DIFF:
      opRel();
      simpleExpr();
                                String t1 = Expression.popType() ;
                                String t2 = Expression.popType() ;
                                String op = Expression.popOperator() ;

                                String res = Expression.binExprReturn(t1,t2,op) ;
                                Expression.addType(res) ;

                                String inf =  YakaConstants.tokenImage[INF] ;
                                String infegal = YakaConstants.tokenImage[INFEGAL] ;
                                String sup = YakaConstants.tokenImage[SUP] ;
                                String supegal = YakaConstants.tokenImage[SUPEGAL] ;
                                String egal = YakaConstants.tokenImage[EGAL] ;
                                String diff = YakaConstants.tokenImage[DIFF] ;

                                try {
                                        if (res==YakaConstants.tokenImage[ERROR])
                                                {if (true) throw new ParseException("type err");}
                                        else {
                                                String s = "" ;
                                                if (op==inf)            s = "\u005cniinf " ;
                                                if (op==infegal)        s = "\u005cniinfegal " ;
                                                if (op==sup)            s = "\u005cnisup " ;
                                                if (op==supegal)        s = "\u005cnisupegal " ;
                                                if (op==egal)           s = "\u005cniegal " ;
                                                if (op==diff)           s = "\u005cnidiff " ;

                                                if (s=="")
                                                        {if (true) throw new ParseException("operator err");}
                                                else
                                                        Yaka.result += s ;
                                        }
                                }
                                catch (ParseException e) {
                                        String msg = e.getMessage();
                                        System.out.println("Erreur de syntaxe : "+msg);
                                }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
  }

  static final public void simpleExpr() throws ParseException {
    terme();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MOINS:
      case OU:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_6;
      }
      opAdd();
      terme();
                                String t1 = Expression.popType() ;
                                String t2 = Expression.popType() ;
                                String op = Expression.popOperator() ;

                                String res = Expression.binExprReturn(t1,t2,op) ;
                                Expression.addType(res) ;

                                String plus = YakaConstants.tokenImage[PLUS] ;
                                String moins = YakaConstants.tokenImage[MOINS] ;
                                String ou = YakaConstants.tokenImage[OU] ;

                                try {
                                        if (res==YakaConstants.tokenImage[ERROR])
                                                {if (true) throw new ParseException("type err");}
                                        else {
                                                String s = "" ;
                                                if (op==plus)           s = "\u005cniadd " ;
                                                if (op==moins)          s = "\u005cnisub " ;
                                                if (op==ou)             s = "\u005cnior " ;

                                                if (s=="")
                                                        {if (true) throw new ParseException("operator err");}
                                                else
                                                        Yaka.result += s ;
                                        }
                                }
                                catch (ParseException e) {
                                        String msg = e.getMessage();
                                        System.out.println("Erreur de syntaxe : "+msg);
                                }
    }
  }

  static final public void terme() throws ParseException {
    facteur();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
      case DIV:
      case ET:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      opMul();
      facteur();
                                String t1 = Expression.popType() ;
                                String t2 = Expression.popType() ;
                                String op = Expression.popOperator() ;

                                String res = Expression.binExprReturn(t1,t2,op) ;
                                Expression.addType(res) ;

                                String mul = YakaConstants.tokenImage[MUL] ;
                                String div = YakaConstants.tokenImage[DIV] ;
                                String et = YakaConstants.tokenImage[ET] ;

                                try {
                                        if (res==YakaConstants.tokenImage[ERROR])
                                                {if (true) throw new ParseException("type err");}
                                        else {
                                                String s = "" ;
                                                if (op==mul)            s = "\u005cnimul " ;
                                                if (op==div)            s = "\u005cnidiv " ;
                                                if (op==et)             s = "\u005cniand " ;

                                                if (s=="")
                                                        {if (true) throw new ParseException("operator err");}
                                                else
                                                        Yaka.result += s ;
                                        }
                                }
                                catch (ParseException e) {
                                        String msg = e.getMessage();
                                        System.out.println("Erreur de syntaxe : "+msg);
                                }
    }
  }

  static final public void facteur() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VRAI:
    case FAUX:
    case entier:
    case ident:
    case 53:
      primaire();
      break;
    case MOINS:
    case NON:
      opNeg();
      primaire();
                                String t = Expression.popType() ;
                                String op = Expression.popOperator() ;

                                String res = Expression.unExprReturn(t,op) ;
                                Expression.addType(res) ;

                                try {
                                        if (res==YakaConstants.tokenImage[ERROR])
                                                {if (true) throw new ParseException("type err");}
                                        else {
                                                String s = "" ;
                                                if (op==YakaConstants.tokenImage[MOINS])        s = "\u005cnineg " ;
                                                if (op==YakaConstants.tokenImage[NON])          s = "\u005cninot " ;

                                                if (s=="")
                                                        {if (true) throw new ParseException("operator err");}
                                                else
                                                        Yaka.result += s ;
                                        }
                                }
                                catch (ParseException e) {
                                        String msg = e.getMessage();
                                        System.out.println("Erreur de syntaxe : "+msg);
                                }
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void primaire() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VRAI:
    case FAUX:
    case entier:
    case ident:
      valeur();
      break;
    case 53:
      jj_consume_token(53);
      expression();
      jj_consume_token(54);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void valeur() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case entier:
      jj_consume_token(entier);
                Expression.addType("\u005c"ENTIER\u005c"");
                Yaka.result += "\u005cniconst " + YakaTokenManager.entierLu ;
      break;
    case ident:
      jj_consume_token(ident);
                Expression.addType(IdentArray.get(YakaTokenManager.identLu).type);
                if (IdentArray.get(YakaTokenManager.identLu).isVar())
                        Yaka.result += "\u005cniload " ;
                else
                        Yaka.result += "\u005cniconst " ;
                Yaka.result += IdentArray.get(YakaTokenManager.identLu).getValue() ;
      break;
    case VRAI:
      jj_consume_token(VRAI);
                Expression.addType("\u005c"BOOLEEN\u005c"");
                Yaka.result += "\u005cniconst " + Ident.TRUE ;
      break;
    case FAUX:
      jj_consume_token(FAUX);
                Expression.addType("\u005c"BOOLEEN\u005c"");
                Yaka.result += "\u005cniconst " + Ident.FALSE ;
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void opRel() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EGAL:
      jj_consume_token(EGAL);
                 Expression.addOperator(YakaConstants.tokenImage[EGAL]) ;
      break;
    case DIFF:
      jj_consume_token(DIFF);
                 Expression.addOperator(YakaConstants.tokenImage[DIFF]) ;
      break;
    case INF:
      jj_consume_token(INF);
                 Expression.addOperator(YakaConstants.tokenImage[INF]) ;
      break;
    case INFEGAL:
      jj_consume_token(INFEGAL);
                 Expression.addOperator(YakaConstants.tokenImage[INFEGAL]) ;
      break;
    case SUP:
      jj_consume_token(SUP);
                 Expression.addOperator(YakaConstants.tokenImage[SUP]) ;
      break;
    case SUPEGAL:
      jj_consume_token(SUPEGAL);
                 Expression.addOperator(YakaConstants.tokenImage[SUPEGAL]) ;
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void opAdd() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
                 Expression.addOperator(YakaConstants.tokenImage[PLUS]) ;
      break;
    case MOINS:
      jj_consume_token(MOINS);
                 Expression.addOperator(YakaConstants.tokenImage[MOINS]) ;
      break;
    case OU:
      jj_consume_token(OU);
                 Expression.addOperator(YakaConstants.tokenImage[OU]) ;
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void opMul() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MUL:
      jj_consume_token(MUL);
                 Expression.addOperator(YakaConstants.tokenImage[MUL]) ;
      break;
    case DIV:
      jj_consume_token(DIV);
                 Expression.addOperator(YakaConstants.tokenImage[DIV]) ;
      break;
    case ET:
      jj_consume_token(ET);
                 Expression.addOperator(YakaConstants.tokenImage[ET]) ;
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void opNeg() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MOINS:
      jj_consume_token(MOINS);
                 Expression.addOperator(YakaConstants.tokenImage[MOINS]) ;
      break;
    case NON:
      jj_consume_token(NON);
                 Expression.addOperator(YakaConstants.tokenImage[NON]) ;
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public YakaTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[19];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x0,0x800000,0x0,0x80000000,0x0,0x20400000,0x0,0x80100200,0x80100200,0x3f000,0x80300,0x40c00,0x80100200,0x80000000,0x80000000,0x3f000,0x80300,0x40c00,0x100200,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x2,0x0,0x80000,0x28004,0x80000,0x0,0x100000,0x228004,0x228004,0x0,0x0,0x0,0x228004,0x228004,0x28004,0x0,0x0,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public Yaka(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Yaka(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new YakaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Yaka(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new YakaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Yaka(YakaTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(YakaTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

